Fixing GitHub Hosting Issues

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "reactportfolio",
   "version": "0.1.0",
   "private": true,
+   "homepage": "https://akshaybhopani.github.io/ReactPortfolio",
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
